indiciated required line changes

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -9,6 +9,8 @@ cmake_minimum_required(VERSION 2.8.4)
 PROJECT(examples)
 
 include(../dlib/cmake)
+
+#Change this line to proper directory
 include_directories(/home/ytobah/simple_apx_app/inc/BookKeeping /home/ytobah/simple_apx_app/inc/OperatorHeaders)  #adding the include folder
 
 
@@ -161,6 +163,8 @@ cmake_minimum_required(VERSION 2.8)
 
 add_definitions(-std=c++11 -g) #to add the -std=c++11 flag 
 project(app_project)
+
+#Change the following 3 lines to proper directories
 file(GLOB all_src1 "../../simple_apx_app/src/CSrc/*.cpp")
 file(GLOB all_src2 "../../simple_apx_app/src/Operators/*.cpp")
 file(GLOB all_src3  "../../simple_apx_app/src/BookKeeping/*.cpp") #includes all the files in the folder src/
@@ -169,5 +173,8 @@ add_executable(svm_c_ex_2 ${all_src1} ${all_src2} ${all_src3} svm_c_ex.cpp) #whi
  TARGET_LINK_LIBRARIES(svm_c_ex_2 dlib )
 add_executable(multiclass_classification_ex_2 ${all_src1} ${all_src2} ${all_src3} multiclass_classification_ex.cpp)
 TARGET_LINK_LIBRARIES(multiclass_classification_ex_2 dlib)
+
+
+#Change this line to proper directory
 include_directories(../../simple_apx_app/inc/BookKeeping ../../simple_apx_app/inc/OperatorHeaders)  #adding the include folder
 
